ADD miembro y redes CEO
Se agrega a WilJc, se agregan redes de CEO y contacto Moonly

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 
                 <div class="about-footer">
                     <p>✨ Conoce más en <a href="https://x.com/MoonlyGrupoVT" target="_blank">@MoonlyGrupoVT</a></p>
+                    <p>📧 Contacto: <a href="mailto:moonlygrupovt@gmail.com">moonlygrupovt@gmail.com</a></p>
                 </div>
             </section>
 
@@ -138,6 +139,7 @@
                     <p style="flex: 1; min-width: 250px;">
                         La fundadora de Moonly ha trabajado durante años en la industria del entretenimiento digital. Su visión de crear un espacio donde las VTubers puedan florecer sin limitaciones ha sido clave para el crecimiento y éxito del grupo. Además de sus habilidades de liderazgo, es una apasionada del arte, la música y la innovación.
                     </p>
+                    <div id="ceoSocials" class="social-links"></div>
                 </div>
             </section>
         </main>
