ADD seccion Artistas
Se agrega la seccion para artistas del grupo

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div id="mainContent">
                 <nav class="tabs">
                     <button class="tab-button active" data-tab="miembros">Miembros</button>
+                    <button class="tab-button" data-tab="miembros_artistas">Artistas</button>
                     <button class="tab-button" data-tab="staff">Staff</button>
                     <button class="tab-button" data-tab="representantes">Representantes</button>
                 </nav>
@@ -38,6 +39,20 @@
                 <section id="miembros" class="tab-content active">
                     <h2>Miembros del Grupo</h2>
                     <table id="membersTable_miembros">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th>Nombre</th>
+                                <th>Redes Sociales</th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </section>
+
+                <section id="miembros_artistas" class="tab-content active">
+                    <h2>Artistas del Grupo</h2>
+                    <table id="membersTable_miembros_artistas">
                         <thead>
                             <tr>
                                 <th></th>
