UPDATE seccion CEO
Se agrega la informacion para la CEO

--- a/index.html
+++ b/index.html
@@ -151,12 +151,23 @@
                 <h2>Nuestra CEO</h2>
                 <div style="display: flex; gap: 20px; flex-wrap: wrap;">
                     <img src="images/ceo.png" alt="Imagen de la CEO" style="max-width: 300px; border-radius: 12px;">
-                    <p style="flex: 1; min-width: 250px;">
-                        La fundadora de Moonly ha trabajado durante años en la industria del entretenimiento digital. Su visión de crear un espacio donde las VTubers puedan florecer sin limitaciones ha sido clave para el crecimiento y éxito del grupo. Además de sus habilidades de liderazgo, es una apasionada del arte, la música y la innovación.
-                    </p>
-                    <div id="ceoSocials" class="social-links"></div>
+                    <div style="flex: 1; min-width: 250px;">
+                        <p>
+                            La fundadora de Moonly ha trabajado durante años en la industria del entretenimiento digital. Su visión de crear un espacio donde las VTubers puedan florecer sin limitaciones ha sido clave para el crecimiento y éxito del grupo. Además de sus habilidades de liderazgo, es una apasionada del arte, la música y la innovación.
+                        </p>
+                        <p>
+                            🌟 <strong>Sobre mí – NyannyVT</strong> 🌟<br><br>
+                            Soy NyannyVT, una neko maga espadachina de polvo de estrellas, viajera entre mundos y coleccionista de encantamientos. Me dedico a entretener corazones, estudiar las estructuras de pociones del nuevo mundo, y compartir un pedacito de mi universo con quienes me acompañan.
+                            <br><br>
+                            Bajo el brillo de las estrellas, también soy una persona real, con sueños y cicatrices, que lucha cada día por dejar una huella única. Madre de dos pequeños seres extraordinarios, y alguien que, aunque le cuesta abrir su corazón por heridas del pasado, siempre está dispuesta a ayudar, incluso cuando eso implique olvidarse un poco de sí misma.
+                            <br><br>
+                            Aquí no solo verás streams, magia o risas... aquí hay alguien que intenta, con cada hechizo y cada palabra, conectar con el mundo, a su manera. 💫
+                        </p>
+                        <div id="ceoSocials" class="social-links" style="margin-top: 10px;"></div>
+                    </div>
                 </div>
             </section>
+
         </main>
 
         <footer>
