--- a/index.html
+++ b/index.html
@@ -149,9 +149,8 @@
             <!-- Sección: Nuestra CEO -->
             <section id="ceoSection" class="hidden-section">
                 <h2>Nuestra CEO</h2>
-                <div style="display: flex; gap: 20px; flex-wrap: wrap;">
-                    <img src="images/ceo.png" alt="Imagen de la CEO" style="max-width: 300px; border-radius: 12px;">
-                    <div style="flex: 1; min-width: 250px;">
+                <div class="ceo-layout">
+                    <div class="ceo-text">
                         <p>
                             La fundadora de Moonly ha trabajado durante años en la industria del entretenimiento digital. Su visión de crear un espacio donde las VTubers puedan florecer sin limitaciones ha sido clave para el crecimiento y éxito del grupo. Además de sus habilidades de liderazgo, es una apasionada del arte, la música y la innovación.
                         </p>
@@ -165,6 +164,7 @@
                         </p>
                         <div id="ceoSocials" class="social-links" style="margin-top: 10px;"></div>
                     </div>
+                    <img src="images/ceo.png" alt="Imagen de la CEO" class="ceo-image">
                 </div>
             </section>
 
