--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
         <main>
             <!-- Sección principal con tabs -->
             <div id="mainContent">
-                <nav class="tabs">
-                    <button class="tab-button active" data-tab="miembros">Miembros</button>
-                    <button class="tab-button" data-tab="miembros_artistas">Artistas</button>
-                    <button class="tab-button" data-tab="staff">Staff</button>
-                    <button class="tab-button" data-tab="representantes">Representantes</button>
-                </nav>
+                <div class="tabs-wrapper">
+                    <nav class="tabs">
+                        <button class="tab-button active" data-tab="miembros">Miembros</button>
+                        <button class="tab-button" data-tab="miembros_artistas">Artistas</button>
+                        <button class="tab-button" data-tab="staff">Staff</button>
+                        <button class="tab-button" data-tab="representantes">Representantes</button>
+                    </nav>
+                </div>
 
                 <section id="miembros" class="tab-content active">
                     <h2>Miembros del Grupo</h2>
