--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@
         <main>
             <!-- Sección principal con tabs -->
             <div id="mainContent">
-                <div class="tabs-wrapper">
-                    <nav class="tabs">
+                <div class="tabs-container">
+                    <div class="tabs-group top">
+                        <button class="tab-button" data-tab="representantes">Representantes</button>
+                    </div>
+                    <div class="tabs-group bottom">
                         <button class="tab-button active" data-tab="miembros">Miembros</button>
                         <button class="tab-button" data-tab="miembros_artistas">Artistas</button>
                         <button class="tab-button" data-tab="staff">Staff</button>
-                        <button class="tab-button" data-tab="representantes">Representantes</button>
-                    </nav>
+                    </div>
                 </div>
+
 
                 <section id="miembros" class="tab-content active">
                     <h2>Miembros del Grupo</h2>
